--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
-APP_NAME=KPA EMC²
-
 #  Integrasi ENV ke Frontend (NEXT_PUBLIC_...)
+NEXT_PUBLIC_ORG_NAME=KPA EMC²
 # NEXT_PUBLIC_SITE_URL=https://organisasi-kita.com
-# NEXT_PUBLIC_WHATSAPP_LINK=https://wa.me/6281234567890
+NEXT_PUBLIC_FACEBOOK_URL=https://www.facebook.com/kpaemc2fmipaunri
+NEXT_PUBLIC_INSTAGRAM_URL=https://www.instagram.com/kpaemc2
+NEXT_PUBLIC_THREADS_URL=https://www.threads.com/@kpaemc2
+NEXT_PUBLIC_YOUTUBE_URL=https://youtube.com/@kpaemc2
+NEXT_PUBLIC_WHATSAPP_CHANNEL_URL=https://whatsapp.com/channel/0029VbB9qzv0gcfNK7Dz1l2T
